--- a/package.json
+++ b/package.json
@@ -17,30 +17,32 @@
     "scripts": {
         "start": "electron .",
         "watch": "webpack --watch --config ./config/webpack.dev.js --progress --colours",
-        "dev": "webpack --config ./config/webpack.dev.js --progress --colours",
+        "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
         "prod": "rimraf dist && webpack --config ./config/webpack.prod.js --progress --colours",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
-        "postinstall": "electron-builder install-app-deps ",
+        "updateDeps": "electron-rebuild -f -w sqlite3",
         "publish": "electron-builder --publish"
     },
     "build": {
         "npmRebuild": "true"
     },
     "dependencies": {
+        "knex": "0.15.2",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
+        "@types/knex": "^0.15.2",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
-        "@types/sqlite3": "^3.1.4",
+        "@types/sqlite3": "^3.1.5",
         "css-loader": "^2.1.0",
         "electron": "4.0.3",
+        "electron-rebuild": "^1.8.4",
         "electron-builder": "^20.38.5",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
-        "node-gyp": "^3.8.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "rimraf": "^2.6.3",
@@ -50,7 +52,7 @@
         "ts-loader": "^5.3.3",
         "tslint": "^5.12.1",
         "typescript": "^3.3.3",
-        "webpack": "^4.29.5",
+        "webpack": "^4.29.6",
         "webpack-cli": "^3.2.3",
         "webpack-merge": "^4.2.1",
         "webpack-notifier": "^1.7.0"
