--- a/package.json
+++ b/package.json
@@ -28,19 +28,21 @@
     },
     "dependencies": {
         "knex": "0.15.2",
+        "moment": "^2.24.0",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
         "@types/knex": "^0.15.2",
+        "@types/moment": "^2.13.0",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
         "@types/sqlite3": "^3.1.5",
         "css-loader": "^2.1.0",
         "electron": "4.0.3",
-        "electron-rebuild": "^1.8.4",
         "electron-builder": "^20.38.5",
+        "electron-rebuild": "^1.8.4",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
