--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "moment": "^2.24.0",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
+        "react-router-dom": "^5.0.0",
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
@@ -38,6 +39,7 @@
         "@types/moment": "^2.13.0",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
+        "@types/react-router-dom": "^4.3.1",
         "@types/sqlite3": "^3.1.5",
         "css-loader": "^2.1.0",
         "electron": "4.0.3",
