--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
         "electron-rebuild": "^1.8.4",
+        "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
