change printWidth to 120

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
     "singleQuote": false,
     "trailingComma": "es5",
     "tabWidth": 4,
-    "jsxBracketSameLine": true
-  }
-  
+    "jsxBracketSameLine": true,
+    "printWidth": 120
+}
