--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "react-router-dom": "^5.0.0",
+        "react-table": "^6.9.2",
         "recharts": "^1.5.0",
         "sqlite3": "^4.0.6"
     },
@@ -41,6 +42,7 @@
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
         "@types/react-router-dom": "^4.3.1",
+        "@types/react-table": "^6.8.0",
         "@types/recharts": "^1.1.14",
         "@types/sqlite3": "^3.1.5",
         "css-loader": "^2.1.0",
