--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ],
     "scripts": {
         "start": "electron .",
-        "watch": "webpack --watch --config ./config/webpack.dev.js --progress --colours",
+        "watch": "webpack-dev-server --config ./config/webpack.dev.js --progress --colours",
         "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
         "prod": "rimraf dist && webpack --config ./config/webpack.prod.js --progress --colours",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
@@ -54,6 +54,7 @@
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "react-hot-loader": "^4.8.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "source-map-loader": "^0.2.4",
@@ -63,6 +64,7 @@
         "typescript": "^3.3.3",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.1",
         "webpack-merge": "^4.2.1",
         "webpack-notifier": "^1.7.0"
     }
