--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
         "prod": "rimraf dist && webpack --config ./config/webpack.prod.js",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
-        "postinstall": "electron-rebuild -f -w sqlite3",
+        "postinstall": "electron-builder install-app-deps",
         "publish": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish always"
     },
     "build": {
@@ -41,7 +41,6 @@
     },
     "devDependencies": {
         "@types/knex": "^0.15.2",
-        "@types/moment": "^2.13.0",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
         "@types/react-router-dom": "^4.3.1",
@@ -51,7 +50,6 @@
         "css-loader": "^2.1.0",
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
-        "electron-rebuild": "^1.8.4",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
