--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,15 @@ matrix:
           env: CC=clang CXX=clang++ npm_config_clang=1
           compiler: clang
 
-node_js:
-    - "lts/*"
+before_install: # if "install" is overridden
+  # Repo for Yarn
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn=1.9.4
+
+  node_js:
+    - "8.12.0"
 
 cache:
     yarn: true
