--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,41 @@
-sudo: required
-dist: trusty
-
-language: c
-
 matrix:
     include:
         - os: osx
+          osx_image: xcode9.4
+          language: node_js
+          node_js: "10"
+          env:
+              - ELECTRON_CACHE=$HOME/.cache/electron
+              - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+
         - os: linux
-          env: CC=clang CXX=clang++ npm_config_clang=1
-          compiler: clang
-
-before_install: # if "install" is overridden
-  # Repo for Yarn
-  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq yarn=1.9.4
-
-  node_js:
-    - "8.12.0"
+          services: docker
+          language: generic
 
 cache:
-    yarn: true
     directories:
         - node_modules
-
-addons:
-    apt:
-        packages:
-            - icnsutils
-            - libgnome-keyring-dev
-
-install:
-    - yarn install
-    - export DISPLAY=':99.0'
-    - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
-before_script:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start &
-    - sleep 3
+        - $HOME/.cache/electron
+        - $HOME/.cache/electron-builder
 
 script:
-    - yarn config set version-tag-prefix "v"
-    - yarn config set version-git-tag false
-    - yarn run publish
+    - |
+        if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+          docker run --rm \
+            --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+            -v ${PWD}:/project \
+            -v ~/.cache/electron:/root/.cache/electron \
+            -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+            electronuserland/builder:wine \
+            /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn config set version-tag-prefix "v" && yarn config set version-git-tag false && yarn run publish --linux --win"
+        else
+          yarn config set version-tag-prefix "v"
+          yarn config set version-git-tag false
+          yarn run publish
+        fi
+before_cache:
+    - rm -rf $HOME/.cache/electron-builder/wine
+
+branches:
+    except:
+        - "/^v\\d+\\.\\d+\\.\\d+$/"
