--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,19 @@ script:
     - |
         if [ "$TRAVIS_OS_NAME" == "linux" ]; then
           docker run --rm \
-            --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+            --env-file <(env|grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
             -v ${PWD}:/project \
             -v ~/.cache/electron:/root/.cache/electron \
             -v ~/.cache/electron-builder:/root/.cache/electron-builder \
             electronuserland/builder:wine \
-            /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn config set version-tag-prefix "v" && yarn config set version-git-tag false && yarn run publish --linux --win"
+            /bin/bash -c "yarn config set version-tag-prefix "v"" /
+            /bin/bash -c "yarn config set version-git-tag false" /
+            /bin/bash -c "yarn version --new-version $TRAVIS_BUILD_NUMBER" /
+            /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn run publish --linux --win"
         else
           yarn config set version-tag-prefix "v"
           yarn config set version-git-tag false
+          yarn version --new-version $TRAVIS_BUILD_NUMBER
           yarn run publish
         fi
 before_cache:
