--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
+language: node_js
+
+node_js: "10"
+
+env:
+    - ELECTRON_CACHE=$HOME/.cache/electron
+    - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+
 matrix:
     include:
         - os: osx
           osx_image: xcode9.4
-          language: node_js
-          node_js: "10"
-          env:
-              - ELECTRON_CACHE=$HOME/.cache/electron
-              - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
-
         - os: linux
           services: docker
           language: generic
@@ -29,12 +31,12 @@ script:
             electronuserland/builder:wine \
             /bin/bash -c "yarn config set version-tag-prefix "v"" /
             /bin/bash -c "yarn config set version-git-tag false" /
-            /bin/bash -c "yarn version --new-version $TRAVIS_BUILD_NUMBER" /
+            /bin/bash -c "yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER" /
             /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn run publish --linux --win"
         else
           yarn config set version-tag-prefix "v"
           yarn config set version-git-tag false
-          yarn version --new-version $TRAVIS_BUILD_NUMBER
+          yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER
           yarn run publish
         fi
 before_cache:
