--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
-language: node_js
+osx_image: xcode9.4
 
+language: node_js
 node_js: "10"
 
 env:
-    - ELECTRON_CACHE=$HOME/.cache/electron
-    - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+    global:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
-matrix:
-    include:
-        - os: osx
-          osx_image: xcode9.4
-        - os: linux
-          services: docker
-          language: generic
+os:
+    - osx
+    - linux
 
 cache:
     directories:
@@ -21,27 +19,11 @@ cache:
         - $HOME/.cache/electron-builder
 
 script:
-    - |
-        if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-          docker run --rm \
-            --env-file <(env|grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-            -v ${PWD}:/project \
-            -v ~/.cache/electron:/root/.cache/electron \
-            -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-            electronuserland/builder:wine \
-            /bin/bash -c "yarn config set version-tag-prefix "v"" /
-            /bin/bash -c "yarn config set version-git-tag false" /
-            /bin/bash -c "yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER" /
-            /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn run publish --linux --win"
-        else
-          yarn config set version-tag-prefix "v"
-          yarn config set version-git-tag false
-          yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER
-          yarn run publish
-        fi
+    - yarn config set version-tag-prefix "v"
+    - yarn config set version-git-tag false
+    - yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn publish; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn publish -- --mac --win; fi
+
 before_cache:
     - rm -rf $HOME/.cache/electron-builder/wine
-
-branches:
-    except:
-        - "/^v\\d+\\.\\d+\\.\\d+$/"
