--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ script:
     - yarn config set version-tag-prefix "v"
     - yarn config set version-git-tag false
     - yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn publish; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn publish -- --mac --win; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn run publish; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn run publish -- --mac --win; fi
 
 before_cache:
     - rm -rf $HOME/.cache/electron-builder/wine
