--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-osx_image: xcode9.4
-
 language: node_js
 node_js: "10"
 
@@ -8,9 +6,12 @@ env:
         - ELECTRON_CACHE=$HOME/.cache/electron
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
-os:
-    - osx
-    - linux
+matrix:
+    include:
+        - os: osx
+          osx_image: xcode9.4
+
+        - os: linux
 
 cache:
     directories:
@@ -23,7 +24,7 @@ script:
     - yarn config set version-git-tag false
     - yarn version --new-version 0.0.$TRAVIS_BUILD_NUMBER
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn run publish; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn run publish -- --mac --win; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn run publish --mac --win; fi
 
 before_cache:
     - rm -rf $HOME/.cache/electron-builder/wine
