build only master

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ env:
         - ELECTRON_CACHE=$HOME/.cache/electron
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
+branches:
+    only:
+        - master
+
 matrix:
     include:
         - os: osx
