--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ matrix:
 
 cache:
     directories:
-        - node_modules
         - $HOME/.cache/electron
         - $HOME/.cache/electron-builder
+        - yarn
+        - npm
 
 script:
     - yarn config set version-tag-prefix "v"
