--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-    "name": "electron-starter-kit",
     "version": "1.0.0",
+    "name": "Newt",
     "main": "./dist/main.bundle.js",
     "author": "Ankur Sheel <ankur.sheel@gmail.com>",
     "license": "MIT",
     "description": "A app to view networth changes",
     "private": true,
-    "repository": "github.com:AnkurSheel/Poseidon.git",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AnkurSheel/Poseidon.git"
+    },
     "keywords": [
         "electron",
         "typescript",
@@ -18,10 +21,10 @@
         "start": "electron .",
         "watch": "webpack-dev-server --config ./config/webpack.dev.js --progress --colours",
         "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
-        "prod": "rimraf dist && webpack --config ./config/webpack.prod.js --progress --colours",
+        "prod": "rimraf dist && webpack --config ./config/webpack.prod.js",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
-        "postinstall": "electron-rebuild -f -w sqlite3",
-        "publish": "electron-builder --publish"
+        "postinstall": "electron-builder install-app-deps",
+        "publish": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish always"
     },
     "build": {
         "npmRebuild": "true"
@@ -38,7 +41,6 @@
     },
     "devDependencies": {
         "@types/knex": "^0.15.2",
-        "@types/moment": "^2.13.0",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
         "@types/react-router-dom": "^4.3.1",
@@ -48,7 +50,6 @@
         "css-loader": "^2.1.0",
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
-        "electron-rebuild": "^1.8.4",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
