--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.0",
+    "version": "0.0.0",
     "name": "Newt",
     "main": "./dist/main.bundle.js",
     "author": "Ankur Sheel <ankur.sheel@gmail.com>",
@@ -24,7 +24,9 @@
         "prod": "rimraf dist && webpack --config ./config/webpack.prod.js",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
         "postinstall": "electron-builder install-app-deps",
-        "publish": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish always"
+        "buildNoPublish": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish never",
+        "semantic-release": "semantic-release",
+        "commit": "yarn git-cz"
     },
     "build": {
         "npmRebuild": "true"
@@ -40,6 +42,8 @@
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
+        "@semantic-release/changelog": "^3.0.2",
+        "@semantic-release/git": "^7.0.8",
         "@types/knex": "^0.15.2",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
@@ -47,7 +51,9 @@
         "@types/react-table": "^6.8.0",
         "@types/recharts": "^1.1.14",
         "@types/sqlite3": "^3.1.5",
+        "commitizen": "^3.0.7",
         "css-loader": "^2.1.0",
+        "cz-conventional-changelog": "2.1.0",
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
         "faker": "^4.1.0",
@@ -58,6 +64,7 @@
         "react-hot-loader": "^4.8.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
+        "semantic-release": "^15.13.3",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.3.3",
@@ -68,5 +75,10 @@
         "webpack-dev-server": "^3.2.1",
         "webpack-merge": "^4.2.1",
         "webpack-notifier": "^1.7.0"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
