--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/react-router-dom": "^4.3.1",
         "@types/react-table": "^6.8.0",
         "@types/recharts": "^1.1.14",
+        "@types/recompose": "^0.30.5",
         "@types/sqlite3": "^3.1.5",
         "commitizen": "^3.0.7",
         "css-loader": "^2.1.0",
@@ -62,6 +63,7 @@
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "react-hot-loader": "^4.8.0",
+        "recompose": "^0.30.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "semantic-release": "^15.13.3",
