--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "jsx": "react",
-        "module": "commonjs",
+        "module": "es2015",
         "moduleResolution": "node",
         "noImplicitAny": true,
         "noImplicitThis": true,
