--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ],
     "scripts": {
         "start": "electron .",
-        "watch": "webpack-dev-server --port 3000 --config ./config/webpack.dev.js --progress --colours",
+        "watch": "webpack-dev-server --port 3000 --config ./config/webpack.dev.js --progress --colours --remote-debugging-port=9223",
         "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
         "prod": "rimraf dist && webpack --config ./config/webpack.prod.js",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
@@ -44,6 +44,7 @@
     "devDependencies": {
         "@semantic-release/changelog": "^3.0.2",
         "@semantic-release/git": "^7.0.8",
+        "@types/electron-devtools-installer": "^2.2.0",
         "@types/knex": "^0.15.2",
         "@types/react": "^16.8.3",
         "@types/react-dom": "^16.8.2",
@@ -57,6 +58,7 @@
         "cz-conventional-changelog": "2.1.0",
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
+        "electron-devtools-installer": "^2.2.4",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
