--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
+        "@date-io/moment": "^1.1.0",
+        "@material-ui/core": "^3.9.3",
         "@semantic-release/changelog": "^3.0.2",
         "@semantic-release/git": "^7.0.8",
         "@types/electron-devtools-installer": "^2.2.0",
@@ -61,6 +63,7 @@
         "electron-devtools-installer": "^2.2.4",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
+        "material-ui-pickers": "^2.2.4",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
