--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
         "electron-devtools-installer": "^2.2.4",
+        "emoji-cz": "^0.3.0",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "material-ui-pickers": "^2.2.4",
@@ -82,10 +83,5 @@
         "webpack-dev-server": "^3.2.1",
         "webpack-merge": "^4.2.1",
         "webpack-notifier": "^1.7.0"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
     }
 }
