--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
         "semantic-release": "semantic-release",
         "commit": "yarn git-cz"
     },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
+    },
     "build": {
         "npmRebuild": "true"
     },
@@ -42,6 +47,8 @@
         "sqlite3": "^4.0.6"
     },
     "devDependencies": {
+        "@commitlint/cli": "^7.5.2",
+        "@commitlint/config-conventional": "^7.5.0",
         "@date-io/moment": "^1.1.0",
         "@material-ui/core": "^3.9.3",
         "@semantic-release/changelog": "^3.0.2",
@@ -64,6 +71,7 @@
         "emoji-cz": "^0.3.0",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
+        "husky": "^1.3.1",
         "material-ui-pickers": "^2.2.4",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
