--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     ],
     "scripts": {
         "start": "electron .",
-        "watch": "webpack-dev-server --port 3000 --config ./config/webpack.dev.js --progress --colours --remote-debugging-port=9223",
-        "dev": "rimraf dist && webpack --config ./config/webpack.dev.js --progress --colours",
-        "prod": "rimraf dist && webpack --config ./config/webpack.prod.js",
+        "watch": "env-cmd .env.dev webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
+        "dev": "rimraf dist && env-cmd .env.dev webpack --config ./config --progress --colours",
+        "prod": "rimraf dist && env-cmd .env webpack --config ./config",
         "build": "yarn prod && electron-builder . --config ./electron-builder.json",
         "postinstall": "electron-builder install-app-deps",
         "buildNoPublish": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish never",
@@ -69,6 +69,7 @@
         "electron": "4.0.3",
         "electron-builder": "^20.38.5",
         "emoji-cz": "^0.3.0",
+        "env-cmd": "^8.0.2",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.3.1",
