--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "jsx": "react",
         "module": "es2015",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
         "sourceMap": true,
@@ -12,7 +14,8 @@
         "baseUrl": ".",
         "paths": {
             "*": ["node_modules/*"]
-        }
+        },
+        "lib": ["es6", "dom", "es2017.object"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
