perf: 🚀 install electron-devtools only for development builds

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "jsx": "react",
-        "module": "es2015",
+        "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "esModuleInterop": true,
