--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
         - ELECTRON_CACHE=$HOME/.cache/electron
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
-branches:
-    only:
-        - master
+# branches:
+#     only:
+#         - master
 
 cache:
     directories:
