--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@commitlint/cli": "^7.5.2",
         "@commitlint/config-conventional": "^7.5.0",
         "@semantic-release/changelog": "^3.0.2",
+        "@semantic-release/exec": "^3.3.2",
         "@semantic-release/git": "^7.0.8",
         "@types/electron-devtools-installer": "^2.2.0",
         "@types/knex": "^0.15.2",
