--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "@date-io/moment": "^1.1.0",
         "@material-ui/core": "^3.9.3",
         "electron-devtools-installer": "^2.2.4",
+        "electron-log": "^3.0.5",
+        "electron-updater": "^4.0.6",
         "knex": "0.15.2",
         "material-ui-pickers": "^2.2.4",
         "moment": "^2.24.0",
