--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
         - stage: Build
           name: "Build"
           script:
-              - yarn run buildNoPublish
+              - yarn run build
           before_cache:
               - rm -rf $HOME/.cache/electron-builder/wine/wine-2.0.3-mac-10.13/wine-home/system.reg
               - rm -rf $HOME/.cache/electron-builder/wine/wine-2.0.3-mac-10.13/wine-home/user.reg
