fix: 🚑 allow user to modify installation dir for windows exe

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,8 +28,8 @@
             {
                 "assets": [
                     { "path": "build/Newt-win.zip" },
-                    { "path": "build/Newt-win.exe" },
-                    { "path": "build/Newt-win.exe.blockmap" },
+                    { "path": "build/Newt-Setup.exe" },
+                    { "path": "build/Newt-Setup.exe.blockmap" },
                     { "path": "build/latest.yml" },
                     { "path": "build/Newt-mac.zip" },
                     { "path": "build/Newt-mac.dmg" },
