--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-cayman
+
+description: A net worth tracker
+
+show_downloads: "true"
+
+github:
+  windows_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-Setup.exe
+  mac_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-mac.dmg
+  linux_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-linux.AppImage
