--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,14 @@ pool:
 
 steps:
     - script: echo Hello, world! $(imageName)
+    - task: UsePythonVersion@0
+      displayName: "Use Python 2.x"
+      inputs:
+          versionSpec: 2.x
+    - task: UsePythonVersion@0
+      displayName: "Use Python 2.x"
+      inputs:
+          versionSpec: 2.x
+    - task: geeklearningio.gl-vsts-tasks-yarn.yarn-task.Yarn@2
+      displayName: 'Yarn install'
+
