--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "watch": "env-cmd .env.dev webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
         "dev": "rimraf dist && env-cmd .env.dev webpack --config ./config --progress --colours",
         "prod": "rimraf dist && env-cmd .env webpack --config ./config",
-        "postinstall": "electron-builder install-app-deps",
-        "build": "yarn prod &&  electron-builder . --config ./electron-builder.json --publish never",
+        "install-app-deps": "electron-builder install-app-deps",
+        "build": "npm run prod &&  electron-builder . --config ./electron-builder.json --publish never",
         "semantic-release": "semantic-release",
         "commit": "yarn git-cz"
     },
