--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,15 +9,7 @@ trigger:
             - "*"
 
 jobs:
-    # - job: Variables
-    #   steps:
-    #       - script: |
-    #             echo Build.SourceBranch $(Build.SourceBranch)
-    #             echo Build.SourceVersionMessage $(Build.SourceVersionMessage)
-    #         displayName: setvarStep
-
     - job: Version_And_Tag
-      # dependsOn: Variables
       condition: not(contains(variables['Build.SourceBranch'], 'tag'))
       steps:
           - task: NodeTool@0
@@ -25,22 +17,25 @@ jobs:
             inputs:
                 versionSpec: 10.x
 
-          - task: UsePythonVersion@0
-            displayName: "Use Python 2.x"
-            inputs:
-                versionSpec: 2.x
+          # - task: UsePythonVersion@0
+          #   displayName: "Use Python 2.x"
+          #   inputs:
+          #       versionSpec: 2.x
 
-          - script: npm install
+          # - script: npm install
+          #   displayName: Install dependencies
+
+          # - script: npm run build
+          #   displayName: Build application
+
+          - script: npm install --save-dev @semantic-release/changelog @semantic-release/git semantic-release
             displayName: Install dependencies
-
-          - script: npm run build
-            displayName: Build application
 
           - script: npm run semantic-release
             displayName: Version and Tag
 
     - job: Build
-      condition: and(succeeded(), contains(variables['Build.SourceBranch'], 'tag'))
+      condition: contains(variables['Build.SourceBranch'], 'tag')
       strategy:
           maxParallel: 2
           matrix:
@@ -76,7 +71,6 @@ jobs:
                 SourceFolder: "$(System.DefaultWorkingDirectory)"
                 Contents: |
                     build/*
-                    package.json
                 TargetFolder: "$(Build.ArtifactStagingDirectory)"
 
           - task: PublishBuildArtifacts@1
@@ -85,5 +79,27 @@ jobs:
       dependsOn: Build
       condition: and(succeeded(), contains(variables['Build.SourceBranch'], 'tag'))
       steps:
-          - script: echo Build.SourceBranch $(Build.SourceBranch)
-            displayName: Variables Debug
+          - task: DownloadBuildArtifacts@0
+            inputs:
+                buildType: "current"
+                downloadType: "single"
+                artifactName: "drop"
+                downloadPath: "$(System.ArtifactsDirectory)"
+          - task: GithubRelease@0
+            displayName: "Create GitHub Release"
+            inputs:
+                githubConnection: GitHubconnection
+                repositoryName: "$(Build.Repository.Name)"
+                # action: "create"
+                # target: "$(Build.SourceVersion)" # Required when action == Create || Action == Edit
+                # tagSource: "auto"
+                #tag: # Required when action == Edit || Action == Delete || TagSource == Manual
+                #title: # Optional
+                releaseNotesSource: "input" # Optional. Options: file, input
+                # releaseNotesFile: $(System.DefaultWorkingDirectory)/CHANGELOG.md
+                releaseNotes: "See the [Changelog](https://github.com/AnkurSheel/Newt/blob/master/CHANGELOG.md)"
+                assets: $(System.ArtifactsDirectory)\**
+                #assetUploadMode: 'delete' # Optional. Options: delete, replace
+                #isDraft: false # Optional
+                #isPreRelease: false # Optional
+                addChangeLog: false # Optional
