--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,34 +11,10 @@
             }
         ],
         [
-            "@semantic-release/exec",
-            {
-                "prepareCmd": "yarn run build --mac --win --linux 1>&2"
-            }
-        ],
-        [
             "@semantic-release/git",
             {
                 "assets": ["package.json", "CHANGELOG.md"],
-                "message": "chore(New Release): Version ${nextRelease.version} \n\n${nextRelease.notes} [skip ci]"
-            }
-        ],
-        [
-            "@semantic-release/github",
-            {
-                "assets": [
-                    { "path": "build/Newt-win.zip" },
-                    { "path": "build/Newt-Setup.exe" },
-                    { "path": "build/Newt-Setup.exe.blockmap" },
-                    { "path": "build/latest.yml" },
-                    { "path": "build/Newt-mac.zip" },
-                    { "path": "build/Newt-mac.dmg" },
-                    { "path": "build/Newt-mac.dmg.blockmap" },
-                    { "path": "build/latest-mac.yml" },
-                    { "path": "build/Newt-linux.zip" },
-                    { "path": "build/Newt-linux.AppImage" },
-                    { "path": "build/latest-linux.yml" }
-                ]
+                "message": "chore(New Release): Version ${nextRelease.version} \n\n${nextRelease.notes}"
             }
         ]
     ]
