comment linux downloads as we are not building it

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ show_downloads: "true"
 github:
   windows_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-Setup.exe
   mac_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-mac.dmg
-  linux_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-linux.AppImage
+  # linux_download: https://github.com/AnkurSheel/Newt/releases/download/v1.1.2/Newt-linux.AppImage
 
 plugins:
   - jekyll-feed
