chore: ❓ add vs code task to start dev server

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,8 @@
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "internalConsoleOptions": "openOnSessionStart",
             "console": "integratedTerminal",
-            "outputCapture": "std"
+            "outputCapture": "std",
+            "postDebugTask": "postdebugKill"
         }
     ],
     "compounds": [
