--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "port": 9223,
             "webRoot": "${workspaceRoot}",
             "sourceMaps": true,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Debug Main Process",
@@ -28,7 +28,7 @@
             "env": {},
             "sourceMaps": true,
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "internalConsoleOptions": "openOnSessionStart",
+            "internalConsoleOptions": "neverOpen",
             "console": "integratedTerminal",
             "outputCapture": "std",
             "postDebugTask": "postdebugKill"
