--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     ],
     "scripts": {
         "start": "electron .",
-        "dev": "rimraf dist && env-cmd .env.dev webpack --config ./config --progress --colours",
-        "staging": "rimraf dist && env-cmd .env.staging webpack --config ./config --progress --colours",
-        "watch": "env-cmd .env.dev webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
-        "watch:staging": "env-cmd .env.staging webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
-        "prod": "rimraf dist && env-cmd .env webpack --config ./config",
+        "dev": "rimraf dist && webpack --config ./config --progress --colours",
+        "staging": "rimraf dist webpack --config ./config --progress --colours",
+        "watch": "webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
+        "watch:staging": "webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
+        "prod": "rimraf dist && webpack --config ./config",
         "postinstall": "electron-builder install-app-deps",
         "build": "npm run prod &&  electron-builder . --config ./electron-builder.json --publish never",
         "semantic-release": "semantic-release",
