--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
         "knex": "^0.16.5",
         "material-ui-pickers": "^2.2.4",
         "moment": "^2.24.0",
+        "node-localstorage": "^1.3.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
         "recharts": "^1.5.0",
         "recompose": "^0.30.0",
-        "sqlite3": "^4.0.6"
+        "sqlite3": "^4.0.6",
+        "universal-analytics": "^0.4.20",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^7.5.2",
@@ -60,12 +63,15 @@
         "@semantic-release/exec": "^3.3.2",
         "@semantic-release/git": "^7.0.8",
         "@types/electron-devtools-installer": "^2.2.0",
+        "@types/node-localstorage": "^1.3.0",
         "@types/react": "^16.8.14",
         "@types/react-dom": "^16.8.4",
         "@types/react-router-dom": "^4.3.2",
         "@types/recharts": "^1.1.16",
         "@types/recompose": "^0.30.6",
         "@types/sqlite3": "^3.1.5",
+        "@types/universal-analytics": "^0.4.2",
+        "@types/uuid": "^3.4.4",
         "commitizen": "^3.1.1",
         "css-loader": "^2.1.1",
         "cz-conventional-changelog": "^2.1.0",
