fix: 🚑 try to track some events on release

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,6 +69,8 @@ jobs:
 
           - script: npm run build
             displayName: Build application
+            env:
+                GOOGLE_ANALYTICS: $(google.analytics)
 
           - task: CopyFiles@2
             inputs:
