--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "scripts": {
         "start": "electron .",
         "dev": "rimraf dist && webpack --config ./config --progress --colours",
-        "staging": "rimraf dist webpack --config ./config --progress --colours",
+        "staging": "rimraf dist && webpack --config ./config --progress --colours",
         "watch": "webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
         "watch:staging": "webpack-dev-server --port 3000 --config ./config --progress --colours --remote-debugging-port=9223",
         "prod": "rimraf dist && webpack --config ./config",
@@ -43,7 +43,7 @@
         "electron-devtools-installer": "^2.2.4",
         "electron-log": "^3.0.5",
         "electron-updater": "^4.0.6",
-        "knex": "^0.16.5",
+        "knex": "^0.17.1",
         "material-ui-pickers": "^2.2.4",
         "moment": "^2.24.0",
         "node-localstorage": "^1.3.1",
@@ -57,8 +57,8 @@
         "uuid": "^3.3.2"
     },
     "devDependencies": {
-        "@commitlint/cli": "^7.5.2",
-        "@commitlint/config-conventional": "^7.5.0",
+        "@commitlint/cli": "^8.0.0",
+        "@commitlint/config-conventional": "^8.0.0",
         "@semantic-release/changelog": "^3.0.2",
         "@semantic-release/exec": "^3.3.2",
         "@semantic-release/git": "^7.0.8",
@@ -78,11 +78,10 @@
         "electron": "^5.0.0",
         "electron-builder": "^20.39.0",
         "emoji-cz": "^0.3.0",
-        "env-cmd": "^8.0.2",
         "faker": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^2.1.0",
-        "mini-css-extract-plugin": "^0.6.0",
+        "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "react-hot-loader": "^4.8.4",
@@ -91,7 +90,7 @@
         "semantic-release": "^15.13.3",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
-        "ts-loader": "^5.4.3",
+        "ts-loader": "^6.0.2",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
         "webpack": "^4.30.0",
